@@ -707,7 +707,6 @@
                         <textureradioon>buttons/radio/options-radio-button-fo.png</textureradioon>
                         <textureradiooff>buttons/radio/options-radio-button-nf.png</textureradiooff>
                         <radioposx>-19</radioposx>
-                        <visible>substring(Container.FolderPath,addons,left) | substring(Container.FolderPath,plugin,left) | Container.HasFiles</visible>
                     </control>
                 </control>                      
             </control>
