@@ -42,7 +42,6 @@
                     <onup>500</onup>
                     <ondown>500</ondown>
                     <preloaditems>2</preloaditems>
-                    <visible>substring(Container.FolderPath,addons,left) | substring(Container.FolderPath,plugin,left) | Container.HasFiles</visible>
                     <animation effect="slide" end="59" time="400" tween="cubic" easing="inout" condition="Skin.HasSetting(ThumbnailSmall) | substring(Container.FolderPath,addons,left)">Conditional</animation>
                     <itemlayout width="344" height="344" condition="!Skin.HasSetting(ThumbnailSmall) + ![substring(Container.FolderPath,addons,left)]">
                         <control type="image">
@@ -51,8 +50,8 @@
                             <posy>12</posy>
                             <width>332</width>
                             <height>332</height>
-                            <texture diffuse="arctic/covers/332.png">windows/common/black.png</texture>
-                            <colordiffuse>eewhite</colordiffuse>
+                            <texture border="10">arctic/covers/332.png</texture>
+                            <colordiffuse>ee000000</colordiffuse>
                         </control>
                         <control type="image">
                             <description>Poster</description>
@@ -104,8 +103,8 @@
                             <posy>12</posy>
                             <width>217</width>
                             <height>217</height>
-                            <texture diffuse="arctic/covers/217.png">windows/common/black.png</texture>
-                            <colordiffuse>eewhite</colordiffuse>
+                            <texture border="10">arctic/covers/332.png</texture>
+                            <colordiffuse>ee000000</colordiffuse>
                         </control>
                         <control type="image">
                             <description>Poster</description>
@@ -163,8 +162,8 @@
                                 <posy>12</posy>
                                 <width>332</width>
                                 <height>332</height>
-                                <texture diffuse="arctic/covers/332.png">windows/common/black.png</texture>
-                                <aspectratio scalediffuse="false">scale</aspectratio>
+                                <texture border="10">arctic/covers/332.png</texture>
+								<colordiffuse>ee000000</colordiffuse>
                             </control>
                             <control type="image">
                                 <posx>12</posx>
@@ -239,7 +238,8 @@
                                 <posy>12</posy>
                                 <width>217</width>
                                 <height>217</height>
-                                <texture diffuse="arctic/covers/217.png">windows/common/black.png</texture>
+                                <texture border="10">arctic/covers/332.png</texture>
+								<colordiffuse>ee000000</colordiffuse>
                             </control>
                             <control type="image">
                                 <posx>12</posx>
